# istio-upgrade-demo

./: .envrc  .gitignore  README.md  cleanup.yml  gateway-lb-service.yaml  install-bookinfo.sh  playbook.yml  pyproject.toml  requirements.yml  vars.yml
1-10-3/: INSTALL.md  ingressgateway.yaml  istio-1-10-3.json  istiooperator.yaml  operator.yaml
1-9-7/: INSTALL.md  ingressgateway.yaml  istio-1-9-7.json  istiooperator.yaml  operator.yaml
load/: plot.html  run.sh  stats.json
roles/istio_upgrade_demo/tasks/: main.yml
roles/istio_upgrade_demo/tasks/utils/: restart_bookinfo.yml  revisioned_status_check.yml
roles/istio_upgrade_demo/templates/: ingressgateway.yaml.j2  istio-cm.json.j2  istio-ingressgateway-service.yaml.j2  istio-operator.yaml.j2
