[tool.poetry]
name = "istio-upgrade-demo"
version = "0.1.0"
description = "Istio upgrade Demo"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.7.0"
kubernetes = "^19.15.0"
jsonpatch = "^1.32"
google-oauth = "^1.0.0"
jmespath = "^0.10.0"
boto3 = "^1.19.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
